--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -45,8 +45,82 @@ button.carousel-control-prev {
   left: -6%;
 }
 
+footer {
+  width: 40%;
+  margin: 0 auto;
+}
+
 footer a, address {
   text-decoration: none;
   color: gray;
   font-size: 0.7em;
+}
+
+#profile {
+  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(20, 20, 20) 100%);
+}
+
+#mainProfile {
+  width: 40%;
+  margin: 0 auto;
+}
+
+#penProfile {
+  display: block;
+  text-align: center;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 2px solid white;
+  background-color: black;
+  position: absolute;
+  left: 5%;
+  bottom: 5%;
+}
+#penProfile ion-icon {
+  padding: 0;
+  font-size: 0.8rem;
+}
+
+h3 {
+  background-color: #666666;
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1rem;
+}
+
+#profileBtn1 {
+  background-color: #333333;
+  border: 0;
+  width: 70%;
+  font-weight: bold;
+}
+
+#profileBtn2 {
+  padding: 0.3rem 2rem;
+  margin-bottom: 2rem;
+  color: #666666;
+  border: 1px solid #666666;
+  font-weight: bold;
+}
+
+p {
+  font-size: 0.7rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+#checkProfile {
+  margin: 1rem;
+  margin-left: 0;
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #666666;
+}
+#checkProfile ion-icon {
+  padding: 2px;
+  font-size: 1.5rem;
 }/*# sourceMappingURL=style.css.map */
