--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -42,7 +42,7 @@ button.carousel-control-prev{
 }
 footer{
     width: 60%;
-    margin:0 auto;
+    margin:4rem auto;
 }
 footer a, address{
     text-decoration: none;
